Removed body margin

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     display: grid;
     grid-template-columns: 1fr 3fr;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -6,13 +7,16 @@ body {
 
 .sidebar {
     background-color: blue;
-
+    grid-column: 1;
+    grid-row: 1 / span 2;
 }
 
 .header {
-    background-color: gray;
+    background-color: aliceblue;
+    grid-column: 2;
 }
 
 .content {
-    background-color: aliceblue;
+    background-color: gray;
+    grid-column: 2;
 }
