--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 100vh;
 }
 
 .sidebar {
