--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,23 @@
 body {
     margin: 0;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 6fr;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
 }
 
 .sidebar {
-    background-color: blue;
+    background-color: #cfb53b;
     grid-column: 1;
     grid-row: 1 / span 2;
 }
 
 .header {
-    background-color: aliceblue;
+    background-color: white;
     grid-column: 2;
 }
 
 .content {
-    background-color: gray;
+    background-color: #d1cfc3;
     grid-column: 2;
 }
