--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     display: grid;
     grid-template-columns: 1fr 6fr;
+    grid-template-rows: 200px 1fr;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
 }
@@ -23,6 +24,9 @@ body {
 .header {
     background-color: white;
     grid-column: 2;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
 }
 
 .content {
