--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
 
     display: grid;
     grid-template-columns: 2fr 1fr;
+    grid-template-rows: repeat(2, 1fr);
 }
 
 .content .projects {
