--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,11 @@ body {
     color: transparent;
 }
 
+#dashboard-icon,
+.navicon {
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(162deg) brightness(101%) contrast(104%);
+}
+
 .header {
     background-color: white;
     grid-column: 2;
