--- a/styles.css
+++ b/styles.css
@@ -142,24 +142,24 @@ img.profile-picture {
 }
 
 .header > .hithere {
-    display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-template-rows: 1fr 1fr;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 40px;
+
+    margin-left: 30px;
 }
 
 .header > .hithere > img {
-    grid-column: 1;
-    grid-row: 1 / 2;
+    padding: 10px;
+    height: 50px;
+    border-radius: 100%;
+    background-color: var(--old-gold);
 }
 
-.header > .hithere > .hi-text {
-    grid-column: 2;
-    grid-row: 1;
-}
-
-.header > .hithere > .hi-name {
-    grid-column: 2;
-    grid-row: 2;
+.header > .hithere > .hi-text-container {
+    display: flex;
+    flex-direction: column;
 }
 
 /* CONTENT STYLING */
