--- a/styles.css
+++ b/styles.css
@@ -222,3 +222,10 @@ img.profile-picture {
     font-size: 1.5rem;
     font-weight: bold;
 }
+
+.content > .projects > .project-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+}
