--- a/styles.css
+++ b/styles.css
@@ -273,10 +273,21 @@ img.profile-picture {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    gap: 15px;
 }
 
 .announcements > .title {
     color: var(--rich-black);
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+.announcements > .announcements-container {
+    background-color: white;
+    margin-right: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    padding: 20px 20px;
+    border-radius: .5rem;
+
+    font-size: small;
 }
