styled trending container

--- a/styles.css
+++ b/styles.css
@@ -276,7 +276,8 @@ img.profile-picture {
     gap: 15px;
 }
 
-.announcements > .title {
+.announcements > .title,
+.trending > .title {
     color: var(--rich-black);
     font-weight: bold;
     font-size: 1.2rem;
@@ -300,4 +301,19 @@ img.profile-picture {
 
 .announcements > .announcements-container > p {
     color: #747e96;
+}
+
+.trending {
+    margin-top: 20px;
+}
+
+.trending > .trending-container {
+    background-color: white;
+    margin-top: 10px;
+    margin-right: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    padding: 20px 20px;
+    border-radius: .5rem;
+
+    font-size: small;   
 }
